--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <title>Cuzata Custom Catalogs </title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <!-- Favicon configuration -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico?v=1" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico?v=1" />
+    <link rel="shortcut icon" href="/favicon.ico?v=1" />
+    <link rel="apple-touch-icon" href="/favicon.ico?v=1" />
+    <link rel="manifest" href="/manifest.json" />
+    
+    <!-- Force favicon refresh -->
+    <script>
+      // Force favicon refresh to prevent caching issues
+      const favicon = document.querySelector('link[rel="icon"]');
+      if (favicon) {
+        const newHref = favicon.href.split('?')[0] + '?v=' + Date.now();
+        favicon.href = newHref;
+      }
+    </script>
+    
+    <title>ILLUS DECOR - Custom Catalogs</title>
+    <meta name="description" content="Create and share beautiful product catalogs with ILLUS DECOR" />
+    <meta name="author" content="ILLUS DECOR" />
 
-    <meta property="og:title" content="brandify-image-gallery-magic" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="ILLUS DECOR - Custom Catalogs" />
+    <meta property="og:description" content="Create and share beautiful product catalogs with ILLUS DECOR" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
